# survey-auto-analyzer

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
src/: __init__.py  cli.py  config.py
src/engine/: __init__.py  rule_engine.py  rules.py
src/executor/: __init__.py  runner.py
src/executor/methods/: __init__.py  ccsi_acsi.py  chi_square.py  clustering.py  correlation.py  correspondence.py  descriptive.py  factor_analysis.py  fsqca.py  fuzzy_eval.py  lda_topic.py  nps.py  regression.py  reliability.py  runs_test.py  sdgs.py  sentiment.py  so_pmi.py  tfidf.py  ttest_anova.py
src/llm/: __init__.py  deepseek_client.py  prompts.py
src/parser/: __init__.py  data_loader.py  survey_parser.py  variable_classifier.py
src/ranker/: __init__.py  dependency.py  scorer.py
src/reporter/: __init__.py  charts.py  generator.py
src/utils/: __init__.py  data_utils.py
tests/: validate.py
tests/sample_data/: generate_sample.py  sample_survey_data.csv  sample_survey_data.xlsx
