[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survey-auto-analyzer"
version = "1.0.0"
description = "智能问卷分析系统 — 上传问卷数据，自动匹配分析方法，生成分析报告"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Survey Auto Analyzer Team"}
]
keywords = ["survey", "analysis", "statistics", "questionnaire", "market-research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "streamlit>=1.28.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "pingouin>=0.5.3",
    "factor-analyzer>=0.4.1",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "openai>=1.6.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
nlp = [
    "jieba>=0.42.1",
    "snownlp>=0.12.3",
    "gensim>=4.3.0",
    "pyLDAvis>=3.4.0",
]
sem = [
    "semopy>=2.3.0",
    "prince>=0.7.0",
]
viz = [
    "plotly>=5.17.0",
    "seaborn>=0.12.0",
    "wordcloud>=1.9.0",
]
all = [
    "survey-auto-analyzer[nlp,sem,viz]",
]

[project.scripts]
survey-auto = "survey_auto_analyzer.cli:main"

[project.urls]
Homepage = "https://github.com/example/survey-auto-analyzer"
Repository = "https://github.com/example/survey-auto-analyzer"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"survey_auto_analyzer" = "src"
